src/doc_src/snapshots/topics__doc_src__doc_src__test__fixture_file.snap
---
source: src/doc_src/doc_src.rs
expression: d

---
[
    DocSource {
        line_start: 0,
        line_end: 10,
        content: "kind: Topic\nname: Run unit tests\ndeps:\n  - global-node\nsteps:\n  - kind: Instruction\n    name: check-hithub-checkin\n    instruction: |\n      Don\'t forget to check in the changes\n",
    },
    DocSource {
        line_start: 11,
        line_end: 17,
        content: "\nkind: DependencyCheck\nname: global-node\nverify: node -v\nurl: https://www.nodejs.org\n",
    },
    DocSource {
        line_start: 18,
        line_end: 24,
        content: "\nkind: DependencyCheck\nname: global-yarn\nverify: yarn -v\nurl: https://yarn.sh/legacy\n",
    },
    DocSource {
        line_start: 25,
        line_end: 34,
        content: "\nkind: Topic\nname: Run screen shot tests\ndeps:\n  - global-node\n  - global-yarn\nsteps:\n  - github-checkin\n",
    },
    DocSource {
        line_start: 35,
        line_end: 39,
        content: "\nkind: Instruction\nname: github-checkin\ninstruction: Don\'t forget to check in",
    },
]
