src/doc_src/snapshots/topics__doc_src__doc_src__test__single_doc.snap
---
source: src/doc_src/doc_src.rs
expression: doc

---
[
    DocSource {
        line_start: 0,
        line_end: 9,
        content: "\nkind: Topic\nname: Run screen shot tests\ndeps:\n  - global-node\n  - global-yarn\nsteps:\n  - github-checkin\n  ",
    },
]
