src/doc_src/snapshots/topics__doc_src__doc_src__test__single_doc_with_prefix_padding.snap
---
source: src/doc_src/doc_src.rs
expression: srcs

---
[
    DocSourceItem {
        line_start: 3,
        line_end: 10,
        content: "kind: Topic\nname: Run screen shot tests\ndeps:\n  - global-node\n  - global-yarn\nsteps:\n  - github-checkin",
    },
]
