src/doc_src/snapshots/topics__doc_src__doc_src__test__single_doc_with_suffix_padding.snap
---
source: src/doc_src/doc_src.rs
expression: srcs

---
[
    DocSource {
        line_start: 0,
        line_end: 10,
        content: "\nkind: Topic\nname: Run screen shot tests\ndeps:\n  - global-node\n  - global-yarn\nsteps:\n  - github-checkin\n  - |\n    some other long string",
    },
]
